--- a/app/src/main/res/layout/layout_product_item.xml
+++ b/app/src/main/res/layout/layout_product_item.xml
@@ -28,7 +28,7 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="0dp"
-                android:layout_weight="5"
+                android:layout_weight="4.5"
                 android:layout_height="match_parent"
                 android:gravity="center">
 
@@ -55,6 +55,7 @@
                     android:textSize="18dp"/>
 
                 <LinearLayout
+                    android:visibility="gone"
                     android:orientation="horizontal"
                     android:layout_width="150dp"
                     android:layout_height="match_parent"
@@ -95,6 +96,14 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+            <CheckBox
+                android:visibility="gone"
+                android:id="@+id/itemCheck"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
+                android:layout_height="20dp"
+                android:layout_gravity="top|right"/>
 
         </LinearLayout>
 
