--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -82,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:padding="5dp"/>
+            android:padding="3dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -107,7 +107,7 @@
                 android:layout_height="match_parent"
                 android:fontFamily="@font/poppins_medium"
                 android:textColor="@color/black"
-                android:hint="50"
+                android:hint="0"
                 android:textStyle="bold"
                 android:textSize="25dp"
                 android:gravity="center"/>
@@ -126,5 +126,12 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progreesBarApi"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"/>
 
 </RelativeLayout>
