--- a/app/src/main/res/layout/layout_product_item.xml
+++ b/app/src/main/res/layout/layout_product_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="5dp"
-    android:background="@color/snow">
+    android:background="@color/ghost_white">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -22,7 +23,7 @@
                 android:id="@+id/image"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:background="@drawable/latte"
+                android:background="@drawable/ic_baseline_image_24"
                 android:scaleType="fitXY"/>
 
             <LinearLayout
